djvu: enable selection highlighting

https://bugzilla.gnome.org/show_bug.cgi?id=448739